--- a/app/views/front/instagram/log_in.html.erb
+++ b/app/views/front/instagram/log_in.html.erb
@@ -1,1 +1,9 @@
-<%= link_to 'Authorize APP', instagram_authorize_path %>
+<div id="authorize_login_main" class="h-100 w-100">
+  <div class="container h-100">
+    <div class="row h-100 justify-content-center align-items-center">
+      <%= link_to ' Please authorize APP', instagram_authorize_path, alt: 'Authorize APP',
+                  class: 'btn btn-success btn-lg btn-block' %>
+    </div>
+  </div>
+</div>
+
